fixed functionVisitor